# this-is-for-you

./: .gitignore  README.md
for-you/django-for-you/: .dockerignore  Pipfile  docker-compose.yml
for-you/django-for-you/app/: settings.py  urls.py
for-you/django-for-you/foryou/: apps.py  serializers.py
for-you/django-for-you/users/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
for-you/django-for-you/users/migrations/: 0001_initial.py  0002_remove_user_name.py
for-you/flask-for-you/: Dockerfile  Pipfile  README.md  alembic.ini  config.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  wsgi.py
for-you/flask-for-you/mailer/: __init__.py  app.py  faker.py  marsmallow.py  models.py  routes.py  schemas.py  scripts.py  tasks.py  views.py
for-you/flask-for-you/migrations/: env.py
for-you/flask-for-you/migrations/versions/: 69775189e3fe_add_status_in_emailtosend.py  ba00c8e56f61_2020-06-09_initial.py  e61e537fc7c0_add_user_model.py
for-you/flask-for-you/src/: __init__.py
for-you/python/: README.md
for-you/python/django-for-you/: README.md
for-you/python/flask-for-you/: Pipfile  config.py  docker-compose.yml
for-you/vue-for-you/: README.md  package-lock.json  package.json  tslint.json  vue.config.js
for-you/vue-for-you/public/: index.html
for-you/vue-for-you/src/: App.vue  router.ts
for-you/vue-for-you/src/services/: auth.service.ts  (+1 more)
sample/python/django-for-you/: Dockerfile  Pipfile  docker-compose.yml
sample/python/flask-for-you/: Dockerfile  Pipfile  README.md  config.py  docker-compose.yml  manage.py
(+25 files in other folders)
