[tool.poetry]
name = "flask-for-you"
version = "0.1.0"
description = "A flask example project"
authors = ["Nikho Sagala"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.8"
flask = "^1.1.2"
celery = "^4.4.5"
sqlalchemy = "^1.3.17"
marshmallow = "^3.6.1"
mimesis = "^4.0.0"
flask-marshmallow = "^0.13.0"
alembic = "^1.4.2"
psycopg2-binary = "^2.8.5"
marshmallow-sqlalchemy = "^0.23.1"
flask_sqlalchemy = "^2.4.3"
flask_mail = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
